--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "build": "npm install",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "node server.js",
     "dev": "nodemon server.js",
     "swagger": "node ./swagger.js"
@@ -14,6 +14,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "body": "^5.1.0",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "cse_341_final_project": "file:",
@@ -22,11 +23,15 @@
     "express-session": "^1.18.1",
     "express-validator": "^7.2.0",
     "mongodb": "^6.10.0",
+    "mongoose": "^8.7.3",
     "passport": "^0.7.0",
     "passport-github2": "^0.1.12"
   },
   "devDependencies": {
+    "jest": "^29.7.0",
+    "mongodb-memory-server": "^10.1.2",
     "nodemon": "^3.1.7",
+    "supertest": "^7.0.0",
     "swagger-autogen": "^2.23.7",
     "swagger-ui-express": "^5.0.1"
   }
