--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "cse_341_final_project",
-  "version": "1.0.0",
+  "version": "1.3.0",
   "main": "index.js",
   "scripts": {
     "build": "npm install",
-    "test": "jest",
+    "test": "jest --silent",
     "start": "node server.js",
     "dev": "nodemon server.js",
     "swagger": "node ./swagger.js"
