update tests final

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express-validator": "^7.2.0",
     "mongodb": "^6.10.0",
     "mongoose": "^8.7.3",
+    "node-mocks-http": "^1.16.1",
     "passport": "^0.7.0",
     "passport-github2": "^0.1.12"
   },
